Updated layout and index to leverage the template style.

--- a/_posts/2013-07-09-rebirth.md
+++ b/_posts/2013-07-09-rebirth.md
@@ -1,7 +1,9 @@
 ---
 layout: post
-title: Moq Rebirth
+title: Rebirth
 ---
+
+# Moq Rebirth
 
 Moq has been around for quite a few years now (an amazing [4.5 years](https://code.google.com/p/moq/downloads/detail?name=Moq.zip) to be precise). A lot has happened in that time, Moq itself progressed a lot, but more importantly IMHO, there are more choices now, and most of them open source too.
 
