--- a/_posts/2013-07-09-rebirth.md
+++ b/_posts/2013-07-09-rebirth.md
@@ -36,4 +36,6 @@ Now, being open source is a great thing. But not many devs can grab a project's 
 
 And deep understanding of the code is precisely what's needed sometimes to carry forward a project when its owner is no longer around to do it. Or when core features need to be added to keep it alive and fresh with changing requirements.
 
-Therefore, this time I will not develop Moq (Rebirth Edition ;)) in my cave. I will develop it during a series of Google Hangout on Air sessions where anybody can join, ask questions, suggest tests and implementation choices, etc. The entire video sessions will then forever be available on YouTube so that anyone wishing to understand more deeply the project source, or just curious as to how it was built, can have an invaluable (I think) source to do so.
+Therefore, this time I will not develop Moq (Rebirth Edition ;)) in my cave. I will develop it during a series of Google Hangout on Air sessions where anybody can join, ask questions, suggest tests and implementation choices, etc. The entire video sessions will then forever be available on YouTube so that anyone wishing to understand more deeply the project source, or just curious as to how it was built, can have an invaluable (I think) source to do so. 
+
+Oh, and I'll do it following TDD principles as strictly as possible, so it could be educational too, like my older [Funq](http://kzu.to/funqseries) series.
