Added new post on kickstarting the dev on Moq vNext

--- a/_posts/2013-07-09-rebirth.md
+++ b/_posts/2013-07-09-rebirth.md
@@ -32,7 +32,7 @@ Hence the Moq Rebirth, now in two parts: Moq SDK and Moq itself.
 
 ## Beyond Open Source
 
-Now, being open source is a great thing. But not many devs can grab a project's entire source tree and magically figure our how it works and why. Understanding how the various classes fit together, why certain implementations turned out the way they did, is tough on any non-trivial project. 
+Now, being open source is a great thing. But not many devs can grab a project's entire source tree and magically figure our how it works and why. Understanding why certain implementations turned out the way they did, and how the various classes fit together is tough on any non-trivial project. 
 
 And deep understanding of the code is precisely what's needed sometimes to carry forward a project when its owner is no longer around to do it. Or when core features need to be added to keep it alive and fresh with changing requirements.
 
